--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "antd": "^4.15.4",
     "craco-less": "^1.17.1",
     "dayjs": "^1.10.4",
-    "jira-dev-tool": "^1.5.1",
+    "jira-dev-tool": "^1.6.59",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-query": "^3.16.0",
     "react-scripts": "4.0.0",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
