--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
     "@welldone-software/why-did-you-render": "^6.1.1",
     "antd": "^4.15.4",
     "craco-less": "^1.17.1",
